--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          go-version: 1.20
+          node-version: 1.20
       - run: npm test
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
