--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,6 +12,10 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 20.11
+       - name: Install dependencies
+        run: yarn install --frozen-lockfile
+
+      - run: yarn run test
       - run: npm test
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
